# Defect-detection-of-water-sampling-bags

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dataset splitting.py  Dockerfile  Makefile  README.md  app.py  appmysql.py  benchmark_twostage_multilight.py  benchmark_ultralytics_models.py  check_box_repeater.py  check_box_repeater_second.py  db.py  export_ultralytics_onnx.py  filter_box.py  legacy_encrypt.py  predict_twostage_multilight.py  pyproject.toml  requirements-demo.txt  requirements-dev.txt  requirements.txt  test_MultiImg.py  test_SingleImg.py  train_ultralytics.py  train_v8.py  train_yolo11.py
.github/workflows/: ci.yml
config/: README.md  demo.yaml  env.example  multilight_visibility_matrix.yaml  production.example.yaml  waterbag.yaml
config/cpp_backend/: demo.ini
configs/: demo.yaml
cpp_backend/: CMakeLists.txt  README.md
cpp_backend/PLC_driver/include/PLC_driver/: plc.hpp  plc_controller.hpp
cpp_backend/PLC_driver/src/: plc.cpp  plc_controller.cpp
cpp_backend/camera_driver/include/camera_driver/: burst_capture.hpp
cpp_backend/camera_driver/src/: burst_capture.cpp  hikvision_mvs_burst_capture.cpp  hikvision_mvs_burst_capture_stub.cpp
cpp_backend/detect_orchestrator/include/detect_orchestrator/: bag_runtime.hpp  config.hpp  correlator.hpp  detector.hpp  hardware_clock.hpp  logger.hpp  pipeline.hpp  runtime.hpp  schemas.hpp  storage.hpp
cpp_backend/detect_orchestrator/src/: bag_runtime.cpp  config.cpp  correlator.cpp  detector.cpp  hardware_clock.cpp  logger.cpp  main.cpp  pipeline.cpp  runtime.cpp  schemas.cpp  service_main.cpp  storage.cpp
cpp_backend/detect_orchestrator/tests/: backend_tests.cpp
cpp_backend/mock_camera_driver/include/mock_camera_driver/: mock_burst_capture.hpp
cpp_backend/mock_camera_driver/src/: mock_burst_capture.cpp
crypt/: weight_crypto.py
data/: waterbag.yaml
data/hyps/: HYPERPARAMETER_GUIDE.md  hyp.no-augmentation.yaml
detect/: hyp.scratch.yaml
docs/: README.md  _navbar.md  _sidebar.md  index.html
docs/algorithms/: README.md  bag-correlation.md  feature-level-multilight-fusion.md  model-selection.md  multilight-visibility-matrix.md  repeat-defect.md  two-stage-detection.md
docs/architecture/: README.md  data-flow.md  module-overview.md  state-model.md
docs/backend/: README.md
docs/configuration/: README.md  demo-config.md  production-config.md
docs/frontend/: README.md
docs/guide/: prerequisites.md  run-demo.md  training.md
docs/interfaces/: web-api.md
docs/logging/: data-storage.md
docs/model-tools/: README.md
docs/modules/: README.md  detectors.md  pipeline.md  plc-storage.md  runtime-web.md
docs/operations/: README.md
docs/workflow/: demo-workflow.md  deployment-workflow.md  fault-injection.md
legacy/: README.md
legacy/scripts/: Dataset splitting_2.py  check_box_repeater.py  img_crop.py  img_crop_bottom15.py  img_crop_patch.py  test_SingleImg.py
legacy/state/: last_result.txt
legacy/web_pages/: index_origin.html  indexmysql.html
models/: MODELS_GUIDE.md
templates/: index.html
tests/: test_artifacts.py  test_demo_assets.py  test_fault_injection.py  test_multilight_detector.py  test_multilight_fusion.py  test_pipeline.py  test_plc.py  test_repeater.py  test_replay.py  test_storage.py  test_visibility_matrix.py
waterbag_inspection/: __init__.py  artifacts.py  cli.py  config.py  correlation.py  demo_assets.py  detectors.py  fault_injection.py  main.py  multilight.py  multilight_models.py  pipeline.py  plc.py  policy.py  repeater.py  replay.py  schemas.py  service.py  storage.py  twostage_multilight.py  visibility_matrix.py  webapp.py
waterbag_inspection/models/: __init__.py  multilight_fusion.py
web_page/: indexniu2.html
yolo_legacy/: README.md  hubconf.py
yolo_legacy/classify/: train.py
yolo_legacy/detect/: detect.py  train.py
yolo_legacy/segment/: SEGMENT_GUIDE.md
yolo_legacy/utils/: UTILS_FOLDER_GUIDE.md
项目附加文件/: 10月16号采集袋缺陷分类.docx  多光源Burst模块与三包C++架构设计.md  多光源采图与时序对齐方案.md
