[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waterbag-inspection-dashboard"
version = "0.1.0"
description = "Python dashboard, SQLite result store, and model tools for the C++ waterbag backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0.0",
  "ultralytics>=8.3.0",
  "torch>=2.2.0",
  "Pillow>=10.3.0",
  "numpy>=1.26.0",
]

[project.scripts]
waterbag-inspection = "waterbag_inspection.cli:main"
